src/test/deca/context/invalid/object_no_class.deca
{   
    int y;
    int x = y.a;
}
